--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -18,7 +18,7 @@ li {
 }
 .main-container {
     margin: 5vmin;
-    padding: 5vmin;
+    padding: 5vmin 5vmin 10vmin 5vmin;
     background-color: #B8B68F;
     display: flex;
     flex-direction: column;
